@@ -228,6 +228,10 @@ il bind. Se lanciato da utente normale non serve questa opzione.
 \emph{(Non usato in Windows)}
 \item [-x~pluginfile,~--toxml~pluginfile]
 Stampa la descrizione in XML del plugin sullo standard output.
+\item [--fpat~authtype,~--force-proxy-auth-type~authtype]
+Per forzare l'utilizzo di un determinato metodo di autenticazione per
+il proxy.
+I valori accettati sono: ntlm, basic, digest e gss.
 \item [-h,~--help]Stampa un messaggio di aiuto.
 \item [-v,~--verbose,~-w,~--veryverbose]Questo dice a FreePOPs di loggare
 alcune informazioni utili per  riportare bug.
