@@ -220,6 +220,9 @@ user there is no need to use this option. \emph{(Not used under Windows)}
 \emph{(Not used under Windows)}
 \item [-x~pluginfile,~--toxml~pluginfile]Prints on standard
 output the XML description of the plugin.
+\item [--fpat~authtype,~--force-proxy-auth-type~authtype]
+To forse a specific proxy auth method.
+Accepted values are: ntlm, basic, digest e gss.
 \item [-h,~--help]Prints the usage message.
 \item [-v,~--verbose,~-w,~--veryverbose]This tells FreePOPs to log some
 interesting info for bug reporting.
