@@ -1,3 +1,4 @@
+- added --fpat to force proxy auth method
 - some stuff that may fix win32 shutdown problems
 - fixed dothack bug
 - gmail \r\r\n and \r\n\n issue fixed
